# TimerShutDown

./: .travis.yml  CMakeLists.txt  README.md  notepad.cpp  notepad.h  run_command_and_apply_environment_differences.sh  timerShutDown.cpp  vcvars64_vs2017.bat
